--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -1,66 +1,315 @@
-* {
-  margin: 0;
+
+a{
+  text-decoration: none;
+}
+p{
+  font-size: 1.6rem;
+}
+ul{
+  list-style: none;
+}
+img{
+  width: 100%;
+  max-width: 100%;
+  height: auto;
+}
+
+section{
+  padding: 5rem 0;
+}
+
+
+
+// header
+header{
+  width: 100%;
+  height: 4rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+.container{
+  width: 100%;
+  max-width: 98rem;
+  margin: 0 auto;
+  padding:0 1.5rem;
+}
+nav{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+  border-bottom: 1px solid rgba(255,255,255,0.2);
+}
+.nav-brand{
+  width: 2rem;
+}
+.menu-icon i {
+  font-size: 3.5rem;
+  color: #fafafa;
+  cursor: pointer;
+}
+.close i {
+  color: #eb648c;
+}
+.nav-list{
+  width: 25rem;
+  height: 100vh;
+  background-color: #d7d4ed;
+  position: fixed;
+  top: 0;
+  right: -26rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  z-index: 1500;
+  transition: all 650ms ease-in-out;
+}
+.nav-list.active{
+  right: 0;
+}
+.close{
+  position: absolute;
+  top: 1rem;
+  left: 1.5rem;
+}
+.nav-item{
+  margin: 1.5rem 0;
+}
+.nav-link{
+  font-size: 1.6rem;
+  text-transform: uppercase;
+  color: rbga(0,0,0,0.7);
+}
+// hero section
+.hero{
+  width: 100%;
+  height: 80vh;
+  background:  center no-repeat  linear-gradient(135deg, rgba(49,24,131,0.9) 0%, rgba(72,56,149,0.8) 100%), url('/../assets/images/header-bg.jpg');
+  background-size: cover;
+  position: relative;
+}
+.hero::before{
+  content:"" ;
+  position: absolute;
+  left: 0;
+  bottom: -3px;
+  width: 100%;
+  height: 4.7rem;
+  background: url('/../assets/images/wave-small.png') center no-repeat;
+  background-size: cover;
+}
+.main-message{
+  width: 100%;
+  max-width: 50rem;
+  color: #fafafa;
+  text-transform: uppercase;
+  transform: translateY(20%);
+}
+.main-message h3{
+  font-size: 1.6rem;
+}
+.main-message h1{
+  font-family: 'Aldrich', sans-serif;
+  font-size: 4rem;
+  margin: 1rem 0;
+}
+.btn{
+  background-color: #eb648c;
+  border-radius: 2rem;
+  color: #fafafa;
+  display: inline-block;
+  margin-top: 2rem;
+  padding: 1rem 2.5rem;
+  text-transform: uppercase;
+  transition: background-color 650ms;
+}
+.btn:hover{
+  background-color: #ce587b;
+}
+
+// experience
+
+.experience{
   padding: 0;
 }
-.bg{
-  height: 97vh;
-  background-position: center;
-  background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('src/assets/images/bg2.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-color: rgba($color: #f8aae1, $alpha: 1.0);
-}
-
-#header {
-  font-family: cursive;
-  cursor: pointer;
-  font-size: 2rem;
-  background-color: rgba($color: #e4dee2, $alpha: 1.0);
-}
-.main-nav{
-  float: right;
-  list-style: none;
-  margin-top: 10px;
-}
-
-.main-nav li {
-  display: inline-block;
-}
-.main-nav li a {
-  color: white;
-  text-decoration: none;
-  padding: 5px 20px;
-  font-family: "Roboto", sans-serif;
-  font-size: 15px;
-}
-.main-nav li.active a {
-  border: 1px solid white;
-}
-.main-nav li a:hover{
-  border: 1px solid white;
-}
-.logo h2{
-  float: left;
-  height: auto;
-  width: 100px;
-}
-body {
-  font-family: monospace;
-}
-.row {
-  max-width: 1200px;
-  margin: auto;
-}
-.hero{
-  position: absolute;
-  width: 1200px;
-  margin-left: 0px;
-  margin-top: 0px;
-}
-h1 {
-  color: white;
-  text-transform: uppercase;
-  font-size: 70px;
+.title-heading{
   text-align: center;
-  margin-top: 22%;
+  text-transform: uppercase;
+  margin-bottom: 10rem;
+  color: rgb(0,0,0,0.7);
+
 }
+.title-heading h3{
+  font-size: 1.4rem;
+}
+.title-heading h1{
+  font-family: 'Aldrich',sans-serif;
+  font-size: 2rem;
+  margin: .5rem 0 1rem;
+}
+
+.title-heading p{
+  text-transform: lowercase;
+}
+.activities-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(25rem, 1fr));
+  grid-gap: 2.5rem;
+}
+.activities-grid-item{
+  height: 40rem;
+  padding: 5rem;
+  color: #fafafa;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  cursor: pointer;
+  z-index: 1;
+}
+.activities-grid-item::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(135deg, rgba(49,24,131,0.9) 0%, rgba(72,56,149,0.8) 100%);
+  z-index: -1;
+}
+.star-gazing{
+  background: url('/../../assets/images/stars.jpg') center no-repeat;
+}
+.hiking{
+  background: url('/../../assets/images/hiking.jpg') center no-repeat;
+}
+.camping{
+  background: url('/../../assets/images/camping.jpg') center no-repeat;
+}
+.activities-grid-item i{
+  font-size: 4rem;
+  color: #eb648c;
+}
+.activities-grid-item h1{
+  font-family: 'Aldrich', sans-serif;
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  margin: 2rem 0;
+}
+
+// testimonials
+.testimonials{
+  width: 100%;
+  height: 90vh;
+  background: linear-gradient(135deg, rgba(49,24,131,0.9) 0%, rgba(72,56,149,0.8) 100%), url('/../assets/images/testimonials-bg.jpg')  center no-repeat fixed;
+  background-size: cover;
+  position: relative;
+}
+.testimonials::before{
+  content: "";
+  position: absolute;
+  top: -3px;
+  left: 0;
+  width: 100%;
+  height: 4.7rem;
+  background: url('/../../assets/images/wave-small-reversed.png') center no-repeat;
+  background-size: cover;
+}
+.testimonial{
+  width: 100%;
+  color: #fafafa;
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  text-align: center;
+}
+.testimonial-text-box{
+  padding: 0 1.5rem;
+  margin-bottom: 2rem;
+  position: relative;
+}
+.testimonial-text-box i{
+  position: absolute;
+  top: -8rem;
+  left: 50%;
+  transform: translate(-50%);
+  font-size: 8rem;
+  color: #eb648c;
+  opacity: .5;
+  z-index: -1;
+}
+.testimonial-customer img{
+  width: 10rem;
+  height: 10rem;
+  border-radius: 100%;
+  border: 3px solid #eb648c;
+}
+
+// Begin adventure
+.adventure-grid{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(25rem, 1fr));
+  grid-gap: 2.5rem;
+  margin-bottom: 2rem;
+}
+
+.adventure-grid-item p{
+  color: rbga(0, 0,0,0.7);
+}
+
+footer{
+  padding: 1.5rem 0;
+  background-color: #d7d4ed;
+  text-align: center;
+  color: rgba(0,0,0,0.7);
+}
+
+
+// Media queries
+@media screen and (min-width:360px){
+  .main-message{
+    transform: translateY(40%);
+  }
+}
+
+@media screen and (min-width:470px){
+  .hero::before{
+    height: 9.4rem;
+    background: url('/../../assets/images/wave-medium.png');
+    background-size: cover;
+  }
+  .testimonials::before{
+    height: 9.4rem;
+    background: url('/../../assets/images/wave-medium-reversed.png');
+    background-size: cover;
+  }
+}
+
+
+
+@media screen and (min-width:950px){
+  .hero::before{
+    height: 22.7rem;
+    background: url('/../../assets/images/wave-large.png');
+    background-size: cover;
+  }
+  .testimonials::before{
+    height: 22.7rem;
+    background: url('/../../assets/images/wave-large-reversed.png');
+    background-size: cover;
+  }
+}
+
+@media screen and (min-width:1200px){
+  .hero{
+    height: 75vh;
+  }
+}
+
+
+
